# noria-log

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/noria_log/: cloudwatch.py  logger.py
tests/: test_logger.py
